<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".view.familymember.editFamilyMember.EditFamilyMemberFragment">

    <Button
        android:id="@+id/btnEditFamilyMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/btnEditFamilyMember"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/profileimage_of_familymember"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/ivProfileImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonEditBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_birthday"
                app:layout_constraintTop_toBottomOf="@id/etName" />


            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/buttonEditBirthday" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvBirthday">

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:checked="true"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButtonNonBinary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_binary" />
            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchIsArchived"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_active"
                app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
            />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchIsCastrated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_castrated"
                app:layout_constraintTop_toBottomOf="@+id/switchIsArchived" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchIsHuman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_a_human"
                app:layout_constraintTop_toBottomOf="@+id/switchIsCastrated" />

            <Button
                android:id="@+id/buttonAddHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_height"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/switchIsHuman" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/buttonAddHeight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menuType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/familymember_type"
                app:layout_constraintTop_toBottomOf="@id/tvHeight">

                <AutoCompleteTextView
                    android:id="@+id/actvType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/familymember_type"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNewType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_type"
                android:visibility="gone"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/menuType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNote"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/etNewType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
