<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".view.familymember.addFamilyMember.AddFamilyMemberFragment">

    <Button
        android:id="@+id/btnAddFamilyMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/btnAddFamilyMember"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/profileimage_of_familymember"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivProfileImage"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvBirthdayHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/etName" />


            <DatePicker
                android:id="@+id/etBirthday"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBirthdayHeadline" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/etBirthday">

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:checked="true"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButtonNonBinary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_binary" />
            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchIsCastrated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_castrated"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchIsHuman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_a_human"
                app:layout_constraintTop_toBottomOf="@+id/switchIsCastrated" />

            <Button
                android:id="@+id/buttonAddHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/get_height"
                app:layout_constraintTop_toBottomOf="@id/switchIsHuman" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="187cm"
                app:layout_constraintTop_toBottomOf="@id/buttonAddHeight"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menuType"
                app:layout_constraintTop_toBottomOf="@id/tvHeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/familymember_type">

                <AutoCompleteTextView
                    android:id="@+id/actvType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/familymember_type"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNewType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_type"
                android:visibility="visible"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/menuType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNote"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:counterMaxLength="255"
                app:layout_constraintTop_toBottomOf="@+id/etNewType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
