<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddAppointment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_appointment"

        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchShowPastAppointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/also_show_past_appointments"
        app:layout_constraintTop_toBottomOf="@+id/btnAddAppointment" />

    <TextView
        android:id="@+id/tvAllAppointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_appointments"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/switchShowPastAppointments"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllAppointments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAllAppointments"
        app:layout_constraintVertical_bias="0.042"
        tools:listitem="@layout/rvitem_all_appointments" />

</androidx.constraintlayout.widget.ConstraintLayout>
